--- a/hidroizolation/css/min.css
+++ b/hidroizolation/css/min.css
@@ -25,6 +25,13 @@
         right: 0;
         margin: 5px;
     }
+    .servitem {
+        margin-top: 5px;
+    }
+    .servitem p {
+        margin: 0;
+        font-size: 20px;
+    }
 }
 @media screen and (max-width : 840px) {
     .headercontainer h1 {
@@ -42,6 +49,21 @@
         top: auto;
         right: 0;
         margin: 5px;
+    }
+    .servisecont h2 {
+        font-size: 32px;
+        margin: 20px 0;
+    }
+    .serviselist h3 {
+        margin-bottom: 10px;
+    }
+    .servitem {
+        align-items: flex-start;
+    }
+    .servitem img {
+        width: 24px;
+        height: 24px;
+        margin-right: 10px;
     }
 }
 
@@ -64,6 +86,12 @@
         margin-left: 5px;
         margin-top: 10px;
         margin-bottom: 10px;
+    }
+    .servitem p {
+        font-size: 18px;
+    }
+    .serviselist h3 {
+        font-size: 20px;
     }
 }
 @media screen and (max-width : 375px) {
