--- a/hidroizolation/css/content.css
+++ b/hidroizolation/css/content.css
@@ -24,6 +24,7 @@
     height: auto;
     flex-direction: column;
     justify-content: space-between;
+    margin-bottom: 32px;
 }
 .serviselist h3 {
     left: 72px;
@@ -58,10 +59,8 @@
 }
 
 .advantage {
-
     width: 100%;
     height: 424px;
-
     background: #04204D;
 }
 
@@ -88,6 +87,7 @@
     width: 100%;
     height: 196.28px;
     justify-content: space-around;
+    text-align: center;
 }
 .advcart {
     display: flex;
