--- a/hidroizolation/css/content.css
+++ b/hidroizolation/css/content.css
@@ -112,10 +112,8 @@
 
 .price {
     width: 100%;
-    height: 484px;
-
-
     display: flex;
+    margin-bottom: 20px;
 }
 .pricecontent {
     margin: 0 auto 0 auto;
@@ -133,6 +131,7 @@
     align-items: center;
     text-align: center;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 .priceform {
 
@@ -149,13 +148,16 @@
 }
 .blockprice {
     width: 438px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .blockprice p {
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
     line-height: 21px;
-    margin: 0 0 20px 0;
+    margin: 20px 0 20px 0;
     display: flex;
     align-items: center;
     text-align: center;
@@ -238,6 +240,8 @@
     display: flex;
     width: 100%;
     justify-content: space-between;
+    margin-bottom: 10px;
+    align-items: center;
 }
 .worksa p, .worksb p {
     width: 55%;
@@ -272,6 +276,7 @@
     text-decoration: none;
     justify-content: center;
     align-content: space-around;
+    margin-bottom: 20px;
 }
 
 .contact {
