--- a/hidroizolation/css/footer.css
+++ b/hidroizolation/css/footer.css
@@ -16,6 +16,7 @@
     align-items: flex-start;
     justify-content: space-evenly;
     align-content: space-around;
+    flex-wrap: wrap;
 }
 .footer h3 {
     font-style: normal;
@@ -62,4 +63,5 @@
 .controw {
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
