--- a/splitImage/main.css
+++ b/splitImage/main.css
@@ -6,7 +6,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-image: inherit; // Neat huh! :)
+    background-image: inherit; 
     background-size: cover;
     z-index: -1;
     transition: filter .3s ease;
@@ -65,6 +65,3 @@ body {
 }
 
 
-
-
-/*-----------------------------------------------------*/
