--- a/lendingV2/css/header.css
+++ b/lendingV2/css/header.css
@@ -10,11 +10,13 @@ body {
 .header {
     justify-content: center;
     text-align: center;
-    align-items: flex-start;
+    align-items: center;
     width: 100%;
-    background: url(../images/fons/head.png) no-repeat;
+    background-color: black;
     background-size: 100% 250px;
     display: flex;
+    border-bottom: #faac05 2px solid;
+    flex-direction: column;
 }
 .borderdiv {
     position: fixed;
@@ -25,7 +27,7 @@ body {
     justify-content: center;
     text-align: center;
     align-items: center;
-    border-bottom: rgb(253, 253, 253) 2px solid;
+    border-bottom: #faac05 2px solid;
     width: 100%;
     height: 40px;
 }
@@ -34,7 +36,7 @@ body {
     width: 1200px;
     justify-content: flex-end;
 }
-.navbar a {
+.navbar a, .container h2 {
     margin-left: 10px;
     text-decoration: none;
     text-transform: uppercase;
@@ -46,7 +48,7 @@ body {
     color: white;
 }
 .navbar a:hover {
-    color: #F17B7B;
+    color: #faac05;
 }
 .sticky {
     background-color: #C5D1D8;
@@ -60,7 +62,7 @@ body {
 .conthaed {
     width: 1200px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 .conthaed h1 {
     font-family: "Oswald";
@@ -69,7 +71,7 @@ body {
     font-size: 35px;
     line-height: 52px;
     text-transform: uppercase;
-    padding-left: 15%;
+    padding-left: 5%;
     color: #FAFBFD;
     text-align: left;
     display: flex;
@@ -90,4 +92,16 @@ body {
     justify-content: flex-end;
     margin-bottom: 20px;
     align-items: flex-end;
+}
+.headcontact{
+    display: flex;
+    width: 1200px;
+}
+.headcontact img{
+    display: flex;
+    width: 50px;
+    height: 50px;
+}
+.headcontact img:hover{
+    background-color: red;
 }
