--- a/hidroisolationV2/static/css/header.css
+++ b/hidroisolationV2/static/css/header.css
@@ -38,9 +38,47 @@
     height: 630px;
     width: 100%;
     display: flex;
+    justify-content: center;
     background: linear-gradient(288.64deg, #04204D 14.33%, #517DC2 86.91%);
 }
 .headercontainer {
     min-width: 1200px;
+    margin-top: 70px;
     display: flex;
+    position: relative;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.headercontainer h1 {
+    font-size: 42px;
+    line-height: 105%;
+    color: #FFFFFF;
+}
+.headercontainer p {
+    font-size: 20px;
+    line-height: 130%;
+    color: #FFFFFF;
+    max-width: 600px;
+}
+.btn {
+    width: 308px;
+    height: 46px;
+    background: #F9DD01;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+    border-radius: 12.4545px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 17px;
+    line-height: 21px;
+    color: #052354;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.wom {
+    position: absolute;
+    right: 0;
+    bottom: 0;
 }
