--- a/hidroisolationV2/static/css/mobile.css
+++ b/hidroisolationV2/static/css/mobile.css
@@ -1,5 +1,31 @@
 @media only screen and (max-width: 1200px){
     .navcontainer {
         min-width: 100%;
+        justify-content: space-around;
+    }
+    .headercontainer {
+        min-width: 100%;
+    }
+    .besting {
+        min-width: 100%;
+    }
+    .bestcontainer {
+        max-width: 100%;
+    }
+    .servisescontainer {
+        max-width: 100%;
+    }
+    .mediacontent {
+        width: 90%;
+        max-width: 90%;
+    }
+    .mediacontentitem {
+        width: 100%;
+    }
+    .contacts {
+        width: 100%;
+    }
+    .footercontainer {
+        width: 100%;
     }
 }
