--- a/hidroisolationV2/static/css/content.css
+++ b/hidroisolationV2/static/css/content.css
@@ -26,8 +26,8 @@
     margin: 0 30px;
 }
 .bestimg {
-    width: 80px;
-    height: auto;
+    width: auto;
+    height: 80px;
     margin: 20px;
 }
 .bestitem h3 {
