--- a/hidroisolationV2/static/css/header.css
+++ b/hidroisolationV2/static/css/header.css
@@ -23,7 +23,6 @@
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
-    padding: 0 20px 0 20px;
 }
 .navcontainer img {
     position: relative;
@@ -40,7 +39,6 @@
     margin: 0 10px 0 10px;
 }
 .menu a:hover {
-    /*color: #F9DD01;*/
     -webkit-text-shadow: 2px 2px 2px #000;
     -moz-text-shadow: 2px 2px 2px #000;
         text-shadow: 2px 2px 2px #000;
@@ -69,6 +67,7 @@
     position: relative;
     flex-direction: column;
     justify-content: space-around;
+    margin-left: 20px;
 }
 .headercontainer h1, .servisescontainer h2 {
     font-size: 42px;
