--- a/hidroisolationV2/static/css/mobile.css
+++ b/hidroisolationV2/static/css/mobile.css
@@ -1,5 +1,4 @@
 @media only screen and (max-width: 1240px){
-
     .navcontainer {
         min-width: 100%;
         justify-content: space-around;
@@ -69,5 +68,11 @@
     .headercontainer p {
         margin: 10px 3px 10px 3px;
         font-size: 16px;
+    }
+}
+
+@media only screen and (max-width: 950px){
+    .nav {
+        display: none;
     }
 }
